--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body, html {
     background: linear-gradient(-135deg, #e16e2b 0%, #b21f63 100%);
     min-height: 100%;
 }
-.parallax2 {
-    background: linear-gradient(-135deg, #e16e2b 0%, #b21f63 100%);
+.moveimg {
+    background-image: url(img/swoosh.svg);
 }
 
 
