--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
     text-align: center;
 }
 .parallax1 {
-    background-image: url("img/swoosh.svg"), (-135deg, #e16e2b 0%, #b21f63 100%);
+    background-image: url("img/swoosh.svg"), linear-gradient(-135deg, #e16e2b 0%, #b21f63 100%);
     min-height: 100%;
 }
 
